# xfive-statistics-api

./: .dockerignore  .env.example  .env.local  .env.prod.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  task.txt
.github/workflows/: tests.yml
data_statistics/: asgi.py  settings.py  urls.py  wsgi.py
demographics/: admin.py  filters.py  importers.py  models.py  serializers.py  urls.py  views.py
demographics/management/: __init__.py
demographics/management/commands/: __init__.py  import_demographics.py  show_statistics.py
demographics/migrations/: 0001_initial.py
nginx/: nginx.conf
scripts/: docker-setup.sh
tests/: __init__.py  conftest.py  test_api.py  test_csv_import.py  test_frontend.py  test_model_methods.py  test_models.py
tests/fixtures/: sample_demographics.csv
visualization/: urls.py  views.py
visualization/templates/visualization/: base.html  dashboard.html
visualization/templates/visualization/partials/: charts.html  dashboard_script.html  data_management.html  data_table.html  filters.html  statistics.html
