[project]
name = "xfive"
version = "0.1.0"
description = ""
authors = [
    {name = "Maciej Janowski",email = "maciej.janowski1@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.10.0"
ruff = "^0.9.10"

